--- a/listagem/src/main/res/layout/activity_main.xml
+++ b/listagem/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:text="Hello World!"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/listView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
