--- a/paint/src/main/res/layout/activity_main.xml
+++ b/paint/src/main/res/layout/activity_main.xml
@@ -60,6 +60,14 @@
             app:srcCompat="@drawable/finger" />
 
         <ImageButton
+            android:id="@+id/btn_linha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/line" />
+
+        <ImageButton
             android:id="@+id/btn_quadr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
