--- a/paint/src/main/res/layout/activity_main.xml
+++ b/paint/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:text="PaintTool SAI"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.example.paint.SimplePaint
         android:id="@+id/simplepaint"
@@ -32,14 +33,16 @@
         android:layout_width="410dp"
         android:layout_height="50dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <ImageButton
             android:id="@+id/btn_cores"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="COLOR PALLET"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/color_pallet" />
 
@@ -48,6 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="UNDO BUTTON"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/undo" />
 
@@ -56,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="FINGER TOOL"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/finger" />
 
@@ -64,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="LINE TOOL"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/line" />
 
@@ -72,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="SQUARE TOOL"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/square" />
 
@@ -80,6 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="CIRCLE TOOL"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/circle" />
     </LinearLayout>
